# ai-terminal-windows-version-vibecoded

./: .gitattributes  .gitignore  LOCALHOST_AI_SETUP.md  README.md  README_RU.md  package-lock.json  requirements.txt  test_session_isolation.md
ai-terminal/: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  Info.plist  Launcher.app.command  README.md  ai-terminal.rb  angular.json  build-exe-fixed.ps1  build-exe.bat  build-exe.ps1  build-macos-app.sh  build-macos.sh  build-windows.bat  build_macos_app.sh  create-icon.sh  diagnose-app.sh  diagnose.sh  fix_app.sh  install.sh  package-lock.json  package.json  package.sh  proxy.conf.json  run.sh  setup-homebrew-tap.sh  setup-localhost-ai.bat  tsconfig.json
ai-terminal/AI Terminal.app/Contents/: Info.plist
ai-terminal/AI-Terminal.app/Contents/: Info.plist
ai-terminal/AITerminal/: README.md  install.sh
ai-terminal/AITerminal.app/Contents/: Info.plist
ai-terminal/FineTuned/: README.md  export_for_ollama.py  llama2.py
ai-terminal/icons/: README-DMG.txt  README.txt
ai-terminal/src/: app.rs  index.html  main.rs  main.ts  styles.css
ai-terminal/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
ai-terminal/src-tauri/capabilities/: default.json
ai-terminal/src-tauri/src/: lib.rs  main.rs
ai-terminal/src/app/: app.component.css  app.component.html  app.component.ts
ai-terminal/src/config/: constants.rs  keyboard.rs  mod.rs  strings.rs
ai-terminal/src/model/: app.rs  mod.rs
ai-terminal/src/ollama/: api.rs  commands.rs  mod.rs  prompt_eng.rs
ai-terminal/src/terminal/: autocomplete.rs  commands.rs  (+2 more)
(+74 files in other folders)
