[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio", "debug", "advanced"] }
tokio = { version = "1.36", features = ["full"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
once_cell = "1.18"
portable-pty = "0.8"

[package.metadata.bundle]
name = "AI Terminal"
identifier = "com.ai-terminal.app"
icon = ["icons/icon.png"]
category = "DeveloperTool"
short_description = "AI-powered terminal application"
long_description = """
AI Terminal is a Rust-based application that enhances your terminal 
experience with AI capabilities.
"""
copyright = "© 2024"
deb_depends = ["libgtk-3-0", "libwebkit2gtk-4.0-37"]